# Mesen2

./: .gitignore  makefile
Core/Shared/Video/: SoftwareRenderer.cpp  SoftwareRenderer.h
InteropDLL/: EmuApiWrapper.cpp  HistoryApiWrapper.cpp
Linux/: LinuxKeyManager.h  SdlRenderer.cpp  SdlRenderer.h
PosixIpc/: PosixIpcRenderer.cpp  PosixIpcRenderer.h
ZMqIpc/: ZMqIpcKeyManager.cpp  ZMqIpcKeyManager.h  ZMqIpcRenderer.cpp  ZMqIpcRenderer.h
ml_client/: Cargo.toml
ml_client/src/: main.rs  zmq_listener.rs
